Fixes #2371: In the board page, taking more gaps in between in the lists is fixed.

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2532,12 +2532,3 @@ header{
 .no-whitespace ins,del,code{
 	white-space: normal;
 }
-footer{
-	.open > a {
-		&,
-		&:hover,
-		&:focus {
-		  border-color:#f47564 !important;
-		}
-	  }
-}
